Css fixes to align table and banner on the main page.

--- a/RateMyPark/war/RateMyPark.css
+++ b/RateMyPark/war/RateMyPark.css
@@ -7,6 +7,7 @@ h1 {
   font-weight: bold;
   color: #777777;
   text-align: center;
+  margin-right: 75px;
 }
 
 .sendButton {
@@ -87,6 +88,7 @@ input:focus {
 	border-width: 5px;
 	border-color: #66B2FF;
 	border-style: groove;
+	margin-left: 10px;
 }
 
 .our-gwt-Button {
